# copper-rs

./: .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  404.html  AGENTS.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTE.md  CONTRIBUTING.md  Cargo.toml  Notes.txt  README.md  RELEASING.md  SECURITY.md  arm7.sh  crates.js  extra.css  help.html  index.html  justfile  plan.md  release.sh  render_config.sh  run.sh  search-index.js  search.html  settings.html  sitemap.xml  src-files.js
benchmarks/cu_zenoh_bridge_bench/: Cargo.toml  README.md  justfile
benchmarks/horus_caterpillar/: Cargo.toml  README.md
components/cu_transform/: Cargo.toml  README.md
copper/: Cargo.toml
copper/src/: common.rs  config.rs  copperlist.rs  curuntime.rs  cutask.rs  lib.rs  monitoring.rs  rendercfg.rs
copper_clock/: Cargo.toml
copper_clock/src/: lib.rs
copper_datalogger/: Cargo.toml
copper_datalogger/src/: lib.rs
copper_derive/: Cargo.toml
copper_derive/src/: format.rs  lib.rs  utils.rs
copper_derive_test/: Cargo.toml  build.rs  copperconfig.ron
copper_derive_test/src/: main.rs
copper_export/: Cargo.toml
copper_export/src/: lib.rs
copper_export/test/: test.copper
copper_helpers/: Cargo.toml
copper_helpers/src/: lib.rs
copper_log/: Cargo.toml  build.rs
copper_log/src/: index.rs  lib.rs  log_extract.rs  macros.rs
copper_log_derive/: Cargo.toml
copper_log_derive/src/: index.rs  lib.rs
copper_log_reader/: Cargo.toml
copper_log_reader/src/: cli.rs  lib.rs
copper_log_reader/test/: teststructlog.copper
copper_log_runtime/: Cargo.toml
copper_log_test/: Cargo.toml  build.rs
copper_value/: .gitignore  Cargo.toml
cu29/: Cargo.toml  all.html  constant.COMPACT_STRING_CAPACITY.html  enum.UnifiedLogType.html  fn.read_configuration.html  fn.with_cause.html  index.html  macro.bundle_resources!.html  macro.bundle_resources.html  macro.defmt_debug.html  macro.defmt_error.html  macro.defmt_info.html  macro.defmt_warn.html  macro.input_msg.html  macro.output_msg.html  macro.resources.html  macro.rx_channels!.html  macro.rx_channels.html  macro.tx_channels!.html  macro.tx_channels.html  sidebar-items.js  struct.CuCompactString.html  struct.CuError.html  trait.CopperListPayload.html  trait.CopperListTuple.html  trait.CuMetadataTrait.html  trait.CuMsgMetadataTrait.html  trait.ErasedCuMsg.html  trait.ErasedCuMsgs.html  trait.ErasedCuStampedData.html  trait.ErasedCuStampedDataSet.html  trait.MatchingTasks.html  trait.Metadata.html  trait.WriteStream.html  type.CuResult.html
cu29_clock/: Cargo.toml  all.html  enum.Tov.html  fn.busy_wait_for.html  fn.busy_wait_until.html  fn.initialize.html  fn.read_raw_counter.html  index.html  sidebar-items.js  struct.CuDuration.html  struct.CuInstant.html  struct.CuTimeRange.html  struct.Instant.html  struct.OptionCuTime.html  struct.PartialCuTimeRange.html  struct.RobotClock.html  struct.RobotClockMock.html  trait.ClockProvider.html  trait.SaturatingSub.html  type.CuTime.html  type.Instant.html
cu29_derive/: Cargo.toml  README.md  all.html  attr.copper_runtime.html  build.rs  index.html  macro.bundle_resources.html  macro.gen_culist_payload!.html  macro.gen_culist_payload.html  macro.gen_culist_tuple!.html  macro.gen_culist_tuple.html  macro.gen_cumsgs.html  macro.resources.html  sidebar-items.js
cu29_export/: Cargo.toml  README.md  all.html  build.rs  enum.Command.html  enum.ExportFormat.html  fn.copperlists_dump.html  fn.copperlists_reader.html  fn.keyframes_reader.html  fn.run_cli.html  fn.struct_log_iterator_bare.html  fn.struct_log_iterator_unified.html  fn.structlog_reader.html  fn.textlog_dump.html  index.html  sidebar-items.js  struct.LogReaderCli.html  struct.PyCuLogEntry.html  struct.PyLogIterator.html
cu29_helpers/: Cargo.toml  all.html  fn.basic_copper_setup.html  index.html  sidebar-items.js  struct.CopperContext.html
cu29_intern_strs/: Cargo.toml  all.html  fn.default_log_index_dir.html  fn.intern_string.html  fn.read_interned_strings.html  fn.record_callsite.html  index.html  sidebar-items.js
cu29_log/: Cargo.toml  README.md  all.html  constant.ANONYMOUS.html  constant.MAX_LOG_PARAMS_ON_STACK.html  enum.CuLogLevel.html  fn.default_log_index_dir.html  fn.format_logline.html  fn.rebuild_logline.html  index.html  macro.__cu29_defmt_debug.html  macro.__cu29_defmt_error.html  macro.__cu29_defmt_info.html  macro.__cu29_defmt_warn!.html  macro.__cu29_defmt_warn.html  macro.defmt_debug.html  macro.defmt_error.html  macro.defmt_info.html  macro.defmt_warn!.html  macro.defmt_warn.html  sidebar-items.js  struct.CuLogEntry.html
cu29_log_derive/: Cargo.toml  README.md  all.html  index.html  macro.critical!.html  macro.critical.html  macro.debug.html  macro.error.html  macro.info.html  macro.intern.html  macro.warning.html  sidebar-items.js
cu29_log_runtime/: Cargo.toml  README.md  all.html  build.rs  fn.log.html  fn.log_debug_mode.html  index.html  sidebar-items.js  static.EXTRA_TEXT_LOGGER.html  struct.ExtraTextLogger.html  struct.LoggerRuntime.html  struct.NullLog.html  struct.OwningIoWriter.html  struct.SimpleFileWriter.html
cu29_log_test/: Cargo.toml  all.html  fn.main.html  index.html
cu29_soa_derive/: Cargo.toml  all.html  attr.soa.html  derive.Soa.html  index.html  sidebar-items.js
cu29_unifiedlog/: Cargo.toml  all.html  constant.MAIN_MAGIC.html  constant.SECTION_HEADER_COMPACT_SIZE.html  constant.SECTION_MAGIC.html  enum.AllocatedSection.html  enum.UnifiedLogger.html  fn.stream_write.html  index.html  sidebar-items.js  struct.EndOfLogMarker.html  struct.MainHeader.html  struct.SectionHandle.html  struct.SectionHeader.html  struct.UnifiedLogStatus.html  struct.UnifiedLoggerBuilder.html  struct.UnifiedLoggerIOReader.html  struct.UnifiedLoggerRead.html  struct.UnifiedLoggerWrite.html  trait.SectionStorage.html  trait.UnifiedLogRead.html  trait.UnifiedLogWrite.html
cu29_value/: Cargo.toml  README.md  all.html  enum.DeserializerError.html  enum.SerializerError.html  enum.Unexpected.html  enum.Value.html  fn.to_value.html  index.html  struct.ValueDeserializer.html  struct.ValueVisitor.html
(+88495 files in other folders)
