[workspace]

members = [
  "core/cu29",
  "core/cu29_reflect_derive",
  "core/cu29_clock",
  "core/cu29_derive",
  "core/cu29_export",
  "core/cu29_helpers",
  "core/cu29_intern_strs",
  "core/cu29_log",
  "core/cu29_logviz",
  "core/cu29_log_derive",
  "core/cu29_log_runtime",
  "core/cu29_runtime",
  "core/cu29_soa_derive",
  "core/cu29_traits",
  "core/cu29_unifiedlog",
  "components/bridges/cu_crsf",
  "components/bridges/cu_msp_bridge",
  "components/bridges/cu_iceoryx2_bridge",
  "components/bridges/cu_zenoh_bridge",
  "components/bridges/cu_ros2_bridge",
  "components/libs/cu_msp_lib",
  "components/libs/cu_embedded_registry",
  "components/libs/cu_transform",
  "core/cu29_units",
  "components/monitors/cu_consolemon",
  "components/monitors/cu_logmon",
  "components/payloads/cu_ros2_payloads",
  "components/payloads/cu_gnss_payloads",
  "components/payloads/cu_sensor_payloads",
  "components/payloads/cu_spatial_payloads",
  "components/res/cu_micoairh743",
  "components/res/cu_linux_resources",
  "components/libs/cu_sdlogger",
  "components/bridges/cu_bdshot",
  "components/sinks/cu_rp_gpio",
  "components/sinks/cu_rp_sn754410",
  "components/sinks/cu_lewansoul",
  "components/sinks/cu_zenoh_sink",
  "components/sources/cu_ads7883",
  "components/sources/cu_bmi088",
  "components/sources/cu_gnss_ublox",
  "components/sources/cu_gstreamer",
  "components/sources/cu_hesai",
  "components/sources/cu_livox",
  "components/sources/cu_mpu9250",
  "components/sources/cu_v4l",
  "components/sources/cu_vlp16",
  "components/sources/cu_wt901",
  "components/sources/cu_rp_encoder",
  "components/tasks/cu_aligner",
  "components/tasks/cu_ahrs",
  "components/tasks/cu_apriltag",
  "components/tasks/cu_dynthreshold",
  "components/tasks/cu_pid",
  "components/tasks/cu_ratelimit",
  "components/testing/cu_udp_inject",
  "examples/cu_elrs_bdshot_demo",
  "examples/cu_background_task",
  "examples/cu_flight_controller",
  "examples/cu_bridge_test",
  "examples/cu_caterpillar",
  "examples/cu_config_gen",
  "examples/cu_config_variation",
  "examples/cu_dorabench",
  "examples/cu_image_aligner",
  "examples/cu_iceoryx2_bridge_demo",
  "examples/cu_logging_size",
  "examples/cu_logviz_demo",
  "examples/cu_msp_bridge_loopback",
  "examples/cu_monitoring",
  "examples/cu_min_baremetal",
  "examples/cu_missions",
  "examples/cu_multi_output",
  "examples/cu_multisources",
  "examples/cu_multisources_structs",
  "examples/cu_resources_test",
  "examples/cu_nologging_task",
  "examples/cu_rate_target",
  "examples/cu_reflect_demo",
  "examples/cu_pointclouds",
  "examples/cu_rp_balancebot",
  "examples/cu_run_in_sim",
  "examples/cu_standalone_structlog",
  "examples/cu_zenoh",
  "examples/cu_zenoh_bridge_demo",
  "examples/cu_ros2_bridge_demo",
  "examples/cu_human_pose",
  "examples/cu_debug_session",
  "examples/cu_gnss_ublox_demo",
  "examples/cu_remote_debug_session",
]

# put only the core crates here that are not platform specific
default-members = [
  "core/cu29",
  "core/cu29_clock",
  "core/cu29_derive",
  "core/cu29_export",
  "core/cu29_intern_strs",
  "core/cu29_log",
  "core/cu29_logviz",
  "core/cu29_log_derive",
  "core/cu29_log_runtime",
  "core/cu29_runtime",
  "core/cu29_soa_derive",
  "core/cu29_traits",
  "core/cu29_units",
  "core/cu29_unifiedlog",
]

resolver = "2"

[profile.release]
debug = 2

[workspace.package]
version = "0.13.1"
authors = ["Guillaume Binet <gbin@gootz.net>"]
edition = "2024"
license = "Apache-2.0"
keywords = ["robotics", "middleware", "copper", "real-time"]
categories = ["science::robotics"]
homepage = "https://github.com/copper-project"
repository = "https://github.com/copper-project/copper-rs"

[workspace.metadata.workspaces]
no_individual_tags = true

[workspace.dependencies]

# Copper Core
cu29 = { path = "core/cu29", version = "0.13.0" } # default std
cu29-reflect-derive = { path = "core/cu29_reflect_derive", version = "0.13.0" }
cu29-clock = { path = "core/cu29_clock", default-features = false, version = "0.13.0" }
cu29-derive = { path = "core/cu29_derive", default-features = false, version = "0.13.0" }
cu29-export = { path = "core/cu29_export", version = "0.13.0" } # std only
cu29-helpers = { path = "core/cu29_helpers", version = "0.13.0" } # std only
cu29-intern-strs = { path = "core/cu29_intern_strs", version = "0.13.0" } # std only
cu29-log = { path = "core/cu29_log", default-features = false, version = "0.13.0" }
cu29-log-derive = { path = "core/cu29_log_derive", default-features = false, version = "0.13.0" }
cu29-log-runtime = { path = "core/cu29_log_runtime", default-features = false, version = "0.13.0" }
cu29-logviz = { path = "core/cu29_logviz", version = "0.13.0" }
cu29-runtime = { path = "core/cu29_runtime", default-features = false, version = "0.13.0" }
cu29-soa-derive = { path = "core/cu29_soa_derive", default-features = false, version = "0.13.0" }
cu29-traits = { path = "core/cu29_traits", default-features = false, version = "0.13.0" }
cu29-unifiedlog = { path = "core/cu29_unifiedlog", default-features = false, features = [
  "compact",
], version = "0.13.0" }
cu29-units = { path = "core/cu29_units", version = "0.13.0" }
cu29-value = { path = "core/cu29_value", default-features = false, version = "0.13.0" }
cu-linux-resources = { path = "components/res/cu_linux_resources", version = "0.13.0" }

# Payload definitions
cu-sensor-payloads = { path = "components/payloads/cu_sensor_payloads", version = "0.13.0" }
cu-gnss-payloads = { path = "components/payloads/cu_gnss_payloads", version = "0.13.0" }
cu-spatial-payloads = { path = "components/payloads/cu_spatial_payloads", version = "0.13.0" }
cu-ros2-payloads = { path = "components/payloads/cu_ros2_payloads", version = "0.13.0" }
cu-pid = { path = "components/tasks/cu_pid", version = "0.13.0" }

# External serialization
bincode = { package = "cu-bincode", version = "2.0", default-features = false, features = [
  "derive",
  "alloc",
] }
serde = { version = "1.0", default-features = false, features = [
  "derive",
  "alloc",
] }
serde_json = { version = "1.0", default-features = false }
erased-serde = { version = "0.4", default-features = false, features = [
  "alloc",
] }
serde_derive = { version = "1.0", features = ["default"] }

# External CLI
clap = { version = "4.5", default-features = false, features = [
  "std",
  "derive",
  "help",
  "usage",
  "error-context",
] }

# External proc macros
proc-macro2 = { version = "1.0", default-features = false }
quote = { version = "1.0", default-features = false } # proc macros
syn = { version = "2.0", default-features = false, features = [
  "full",
] } # proc macros

# Unit of measure to be consistent across the project
uom = { version = "0.38", default-features = false, features = [
  "autoconvert",
  "f32",
  "f64",
  "serde",
  "si",
] }

# Compact strings support
compact_str = { version = "0.9", default-features = false, features = [
  "serde",
] }
paste = { version = "1.0.15", default-features = false }
bevy_reflect = { version = "0.18.0", default-features = false, features = [
  "auto_register_static",
] }

# used across testing
tempfile = { version = "3.23", default-features = false }

spin = { version = "0.10" } # should be removed when std is on, but cargo is bad at negative features

# rerun
rerun = { version = "0.29", default-features = false, features = [
  "sdk",
  "server",
  "log",
] }

# smallvec to avoid heap allocations
smallvec = { version = "1.15", default-features = false, features = ["serde"] }
heapless = { version = "0.9", default-features = false, features = ["serde"] }

# rayon for thread pools and such.
rayon = "1.11"

# Realtime sanitizer (standalone)
rtsan-standalone = { version = "0.3.0", default-features = false }

# HashMap that is fast and has no std dependency
hashbrown = { version = "0.16", features = ["serde"] }

# Shared external dependencies of workspace members.
anyhow = { version = "1.0", default-features = false }
arrayvec = { version = "0.7", default-features = false }
avian3d = { version = "0.5.0", default-features = false }
bevy = { version = "0.18.0", default-features = false }
buddy_system_allocator = { version = "0.12", default-features = false }
bytemuck = "1.23.0"
cached-path = { version = "0.10.0", default-features = false }
cfg_aliases = "0.2.1"
chrono = "0.4.41"
circular-buffer = { version = "1.1.0", default-features = false }
cortex-m = "0.7"
cortex-m-rt = "0.7"
ctrlc = "3.5"
defmt = { version = "1.0", default-features = false }
defmt-rtt = "1.1"
embedded-alloc = { version = "0.7", default-features = false }
gstreamer = { version = "0.24", default-features = false }
image = { version = "0.25.6", default-features = false }
libc = { version = "0.2", default-features = false }
linux-embedded-hal = "0.4.0"
log = { version = "0.4", default-features = false }
minicbor-serde = { version = "0.6.2", default-features = false }
nix = { version = "0.31", default-features = false }
panic-probe = "1.0"
petgraph = { version = "0.8", default-features = false }
rp235x-hal = "0.4"
rppal = { version = "0.22.1", default-features = false }
serialport = { version = "4.8.1", default-features = false }
simplelog = "0.12"
socket2 = "0.6"
stm32h7xx-hal = { version = "0.16.0", default-features = false }
strfmt = "0.2"
zenoh = { version = "1.7.0", default-features = false }

[workspace.metadata.cargo-shear]
ignored = ["cu-consolemon"]

[workspace.metadata.dependency-audit]
allow_divergent = ["embedded-hal", "embedded-io", "embedded-sdmmc"]

[profile.screaming]
inherits = "release"
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
debug = false
