[package]
name = "copper"
version = "0.2.0"
authors = ["Guillaume Binet <gbin@gootz.net>"]
edition = "2021"

[dependencies]
lazy_static = "1.4.0"
zerocopy = "0.7.34"
zerocopy-derive = "0.7.34"
petgraph = { version = "0.6.5", features = ["serde", "serde-1", "serde_derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
uom = { version = "0.36.0", features = ["rational"] }
ron = "0.8.1"
copper-log = { path = "../copper_log" }
copper-log-runtime = { path = "../copper_log_runtime" }
bincode = "2.0.0-rc.3"



