[package]
name = "copper"
version = "0.2.0"
authors = ["Guillaume Binet <gbin@gootz.net>"]
edition = "2021"
license = "Apache-2.0"
keywords = ["robotics", "middleware", "copper", "real-time"]
categories = ["science::robotics"]

[package.metadata.cargo-machete]
ignored = ["copper-log-runtime", "copper-log"] # It is used from a proc macro

[[bin]]
name = "copper-rendercfg"
path = "src/rendercfg.rs"

[dependencies]
bincode = { version = "2.0.0-rc.3", features = ["serde"] }
bincode_derive = "2.0.0-rc.3"
petgraph = { version = "0.6.5", features = ["serde", "serde-1", "serde_derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
ron = "0.8.1"
copper-traits = { path = "../copper_traits" }
copper-log = { path = "../copper_log" }
copper-log-derive = { path = "../copper_log_derive" }
copper-log-runtime = { path = "../copper_log_runtime" }
copper-clock = { path = "../copper_clock" }
clap = { version = "4.5.8", features = ["derive"] }
tempfile = "3.10.1"
