[package]
name = "copper-clock"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
keywords = ["robotics", "middleware", "copper", "real-time"]
categories = ["science::robotics"]

[dependencies]
quanta = "0.12.3"
bincode = "2.0.0-rc.3"
bincode_derive = "2.0.0-rc.3"
serde = { version = "1.0.203", features = ["derive"] }

[dev-dependencies]
approx = "0.5.1"
