[package]
name = "copper-datalogger"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
bincode = { version = "2.0.0-rc.3", features = ["serde", "bincode_derive"] }
bincode_derive = { version = "2.0.0-rc.3" }
memmap2 = "0.9.4"
libc = "0.2.155"
copper-traits = { path = "../copper_traits" }

[dev-dependencies]
tempfile = "3.2.0"

