[package]
name = "copper-derive-test"
version = "0.1.0"
edition = "2021"

[dependencies]
copper-derive = { path = "../copper_derive" }
simplelogger = { path = "../examples/simplelogger" }
v4lsrc = { path = "../examples/v4lsrc" }
copper = { path = "../copper" }
copper-log = { path = "../copper_log" }
copper-log-derive = { path = "../copper_log_derive" }
copper-log-runtime = { path = "../copper_log_runtime" }

[build-dependencies]
copper = { path = "../copper" }
uom = "0.36.0"
