[package]
name = "copper-export"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
keywords = ["robotics", "middleware", "copper", "real-time"]
categories = ["science::robotics"]

[dependencies]
copper = { path = "../copper" }
copper-traits = { path = "../copper_traits" }
copper-log = { path = "../copper_log" }
copper-clock = { path = "../copper_clock" }
copper-unifiedlog = { path = "../copper_unifiedlog" }
copper-intern-strs = { path = "../copper_intern_strs" }
clap = { version = "4.5.7", features = ["derive"] }
bincode = { version = "2.0.0-rc.3", features = ["serde", "derive"] }

[dev-dependencies]
copper-log-runtime = { path = "../copper_log_runtime" }
tempfile = "3.10.1"
