[package]
name = "copper-helpers"
version = "0.1.0"
authors = ["Guillaume Binet <gbin@gootz.net>"]
edition = "2021"
license = "Apache-2.0"
keywords = ["robotics", "middleware", "copper", "real-time"]
categories = ["science::robotics"]

[dependencies]
copper-traits = { path = "../copper_traits" }
copper-unifiedlog = { path = "../copper_unifiedlog" }
copper-log = { path = "../copper_log" }
copper-log-runtime = { path = "../copper_log_runtime" }
copper-clock = { path = "../copper_clock" }
simplelog = "0.12.2"
