[package]
name = "copper-log"
version = "0.1.0"
edition = "2021"

[lib]
name = "copper_log"
path = "src/lib.rs"
proc-macro = true

[[bin]]
name = "copper_log_extract"
path = "src/log_extract.rs"

[dependencies]
proc-macro2 = { version = "1.0.83" }
quote = "1.0.36"
syn = { version = "2.0.65", features = ["full"] }
rkv = { version = "0.19.0", features = ["lmdb"] }
lazy_static = { version = "1.4.0" }
