[package]
name = "copper-log-derive"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
keywords = ["robotics", "middleware", "copper", "real-time"]
categories = ["science::robotics"]

[lib]
name = "copper_log_derive"
path = "src/lib.rs"
proc-macro = true

[dependencies]
quote = "1.0.36"
syn = { version = "2.0.65", features = ["full"] }
rkv = { version = "0.19.0", features = ["lmdb"] }
lazy_static = { version = "1.4.0" }
copper-log = { path = "../copper_log" }
