[package]
name = "copper-log-reader"
version = "0.1.0"
edition = "2021"

[dependencies]
copper-log-runtime = { path = "../copper_log_runtime" }
rkv = { version = "0.19.0", features = ["lmdb"] }
byteorder = "1.5.0"
bincode = { version = "2.0.0-rc.3", features = ["serde", "derive"] }
strfmt = "0.2.0"
