[package]
name = "copper-log-runtime"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
keywords = ["robotics", "middleware", "copper", "real-time"]
categories = ["science::robotics"]

[dependencies]
copper-log = { path = "../copper_log" }
copper-traits = { path = "../copper_traits" }
copper-clock = { path = "../copper_clock" }
serde = { version = "1.0.202", features = ["derive"] }
pretty-hex = "0.4.1"
ctor = "0.2.8"
ctrlc = { version = "3.4.4", features = ["termination"] }
kanal = { version = "0.1.0-pre8" }
once_cell = "1.19.0"
simplelog = "0.12.2"
log = "0.4.21"
copper-intern-strs = { path = "../copper_intern_strs" }
bincode = "2.0.0-rc.3"

[dev-dependencies]
bincode = "2.0.0-rc.3"