[package]
name = "copper-log-test"
version = "0.1.0"
edition = "2021"

[dependencies]
copper = { path = "../copper" }
copper-log = { path = "../copper_log" }
copper-log-runtime = { path = "../copper_log_runtime" }
copper-datalogger = { path = "../copper_datalogger" }
copper-value = { path = "../copper_value" }
serde = { version = "1.0.202", features = ["derive"] }

[build-dependencies]
copper-log = { path = "../copper_log" }

