[package]
name = "copper-log-test"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
keywords = ["robotics", "middleware", "copper", "real-time"]
categories = ["science::robotics"]

[dependencies]
copper = { path = "../copper" }
copper-log-derive = { path = "../copper_log_derive" }
copper-helpers = { path = "../copper_helpers" }
serde = { version = "1.0.202", features = ["derive"] }
