[package]
name = "copper-value"
version = "0.7.0"
authors = ["arcnmx", "gbin"]
edition = "2021"

description = "Serialization value trees"
readme = "README.md"
keywords = ["serde"]
license = "MIT"

[dependencies]
serde = "1.0.202"
ordered-float = "4.2.0"
bincode = { version = "2.0.0-rc.3", features = ["serde", "derive"] }
copper-clock = { path = "../copper_clock" }

[dev-dependencies]
serde_derive = "1.0.203"
