[package]
name = "cu29"
description = "Copper Runtime Core crate. Copper is an engine for robotics."
documentation = "https://docs.rs/cu29"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
homepage.workspace = true
repository.workspace = true


[package.metadata.cargo-machete]
ignored = ["cu29-log-runtime", "cu29-log"] # It is used from a proc macro

[[bin]]
name = "cu29-rendercfg"
path = "src/rendercfg.rs"

[dependencies]
bincode = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
petgraph = { version = "0.6.5", features = ["serde", "serde-1", "serde_derive"] }
ron = "0.8.1"
cu29-traits = { workspace = true }
cu29-log = { workspace = true }
cu29-log-derive = { workspace = true }
cu29-log-runtime = { workspace = true }
cu29-clock = { workspace = true }
clap = { workspace = true }
tempfile = "3.10.1"
