[package]
name = "cu29-derive"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
proc-macro = true

[dependencies]
cu29 = { workspace = true }
bincode = { workspace = true }
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true  }
walkdir = "2.5.0"
syntect = "5.2.0"

[build-dependencies]
cargo_metadata = "0.18.1"
cu29-unifiedlog = { workspace = true }

