[package]
name = "cu29-helpers"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
cu29-traits = { workspace = true }
cu29-unifiedlog = { workspace = true }
cu29-log = { workspace = true }
cu29-log-runtime = { workspace = true }
cu29-clock = { workspace = true }
simplelog = "0.12.2"
